# cello-project-template

./: .gitignore  CMakeLists.txt  main.c
